add checkbox functional

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,9 @@
-PORT=
+# backend port
+PORT=****
 
-HOST=
-PORT_DB=
-USER=
-PW=
-DB=
+# connecnt to psql
+HOST="localhost"
+PORT_DB=5432
+USER="postgres"
+PW=******
+DB=******
