--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "pg": "^8.13.3",
