--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-scripts": "5.0.1",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
